# cpp-starter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  class1.cc
test/: CMakeLists.txt
